2006-04-14  Casey Marshall  <csm@gnu.org>

	Fixes PR classpath/24642
	* NEWS: add note about SecureRandom changes, and addition of
	VMSecureRandom.
	* java/security/SecureRandom.java (isSeeded): new field.
	(setSeed, setSeed): set `isSeeded' to `true.'
	(nextBytes): seed this instance if `isSeeded' is false.
	(getSeed): call `generateSeed.'
	(SECURERANDOM_SOURCE, JAVA_SECURITY_EGD, logger): new constants.
	(generateSeed, generateSeed): new methods.
	* vm/reference/java/security/VMSecureRandom.java: new file.

2006-04-14  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/FieldView.java:
	(paint): Apply clipping rectangle of the allocation area
	before painting the text.
	* javax/swing/text/DefaultHighlighter.java:
	(DefaultHighlighter.DefaultHighlightPainter): Use SwingUtilities to
	compute union and intersection,	calculate intersection with allocation
	area before painting, adjust x and width when painting multiple lines
	by the range of the allocation area.

2006-04-14  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/DefaultHighlighter.java:
	(paintLayeredHighlights): Marked as stub.

2006-04-14  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/plaf/basic/BasicTextFieldUI.java:
	(propertyChanged): Added note, change color only if current background
	is a ColorUIResource instance.

2006-04-14  Tom Tromey  <tromey@redhat.com>

	* java/beans/beancontext/BeanContextSupport.java (hasNext): No longer
	a stub.
	(next): Likewise.

2006-04-14  Tom Tromey  <tromey@redhat.com>

	* javax/swing/JComboBox.java (AccessibleJComboBox): Now public.

2006-04-14  Mark Wielaard  <mark@klomp.org>

	* java/lang/Thread.java (getUncaughtExceptionHandler): Return
	thread group when exceptionHandler isn't set.
	* vm/reference/java/lang/VMThread.java (run): Use result of
	thread.getUncaughtExceptionHandler directly.

2006-04-14  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JSplitPane.java